test_files/netlist_format/valid/valid_03.net
V1 in 0 5
R1 in out 1k
C1 out 0 100n
.tran 10m
.backanno
.end
